Twenty Seventeen: Fix issues with theme's Gutenberg support.
A handful of issues were missed in Twenty Seventeen's Gutenberg support, added in #45045. This commit includes the following fixes:

* Update editor placeholder text to use the correct font family.
* Center text and bullets in list-based widget blocks, when block itself is centered.
* Include non "image" variations of the Cover block classes `.wp-block-cover` and `.wp-block-cover-text` in the styles.
* Add spacing underneath the Media & Text block, but make sure the final paragraph in the block doesn't add too much space.
* Simplify selectors used to set editor width to just `.wp-block`.
* Prevent margin from theme's editor-style.css from interfering with editor alignment. 
 
Props pento, davidakennedy.
Fixes #45246.


Built from https://develop.svn.wordpress.org/branches/5.0@43876


git-svn-id: http://core.svn.wordpress.org/branches/5.0@43705 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyseventeen/assets/css/blocks.css
+++ b/wp-content/themes/twentyseventeen/assets/css/blocks.css
@@ -97,11 +97,14 @@ p.has-drop-cap:not(:focus)::first-letter {
 	width: 100%;
 }
 
-/* Cover Image */
+/* Cover */
 
 .wp-block-cover-image.alignright,
+.wp-block-cover.alignright,
 .wp-block-cover-image.alignleft,
-.wp-block-cover-image.aligncenter {
+.wp-block-cover.alignleft,
+.wp-block-cover-image.aligncenter,
+.wp-block-cover.aligncenter {
 	display: flex;
 }
 
@@ -219,9 +222,28 @@ p.has-drop-cap:not(:focus)::first-letter {
 	max-width: 100px;
 }
 
+/* Media & Text */
+
+.wp-block-media-text {
+	margin-bottom: 1.5em;
+}
+
+.wp-block-media-text *:last-child {
+	margin-bottom: 0;
+}
+
 /*--------------------------------------------------------------
 5.0 Blocks - Widgets
 --------------------------------------------------------------*/
+
+/* Archives, Categories & Latest Posts */
+
+.wp-block-archives.aligncenter,
+.wp-block-categories.aligncenter,
+.wp-block-latest-posts.aligncenter {
+	list-style-position: inside;
+	text-align: center;
+}
 
 /* Comments */
 
